# learn-rust

./: .gitignore
01-rust-basics/: README.md
01-rust-basics/src/: lesson01.rs  lesson02.rs  lesson03.rs  lesson04.rs  lesson05.rs  lesson06.rs  lesson07.rs  lesson08.rs  lesson09.rs  lesson10.rs  lesson11.rs  lesson12.rs  lesson13.rs  lesson14.rs  main.rs
02-portfolio-tracker/: Cargo.toml  README.md
02-portfolio-tracker/src/: main.rs
02-portfolio-tracker/src/adapters/: cli.rs  coingecko.rs  json_storage.rs  mod.rs
02-portfolio-tracker/src/domain/: portfolio.rs
02-portfolio-tracker/src/ports/: mod.rs  price_feed.rs  storage.rs
03-web-server/: Cargo.toml  README.md
03-web-server/data/: dev.db
03-web-server/migrations/: 20260420153843_create_portfolios.sql
03-web-server/src/: config.rs  error.rs  lib.rs  main.rs
03-web-server/src/adapters/: errors.rs  mod.rs
03-web-server/src/adapters/clients/: coingecko.rs
03-web-server/src/adapters/routes/: coins.rs  health.rs  mod.rs  prices.rs
03-web-server/src/dto/: auth.rs  coins.rs  mod.rs  portfolio.rs
03-web-server/src/handlers/: auth.rs  coins.rs  health.rs  mod.rs  portfolio.rs  prices.rs
03-web-server/src/middleware/: mod.rs
03-web-server/src/migration/: m20260421_add_auth.rs  m20260422_100609_add_portfolio.rs  mod.rs
03-web-server/src/models/: coin.rs  mod.rs  portfolio.rs  portfolio_asset.rs  refresh_token.rs  user.rs
03-web-server/src/repositories/: auth.rs  mod.rs  portfolio.rs  user.rs
03-web-server/src/routes/: mod.rs
03-web-server/src/services/: auth.rs  coingecko.rs  mod.rs  portfolio.rs
03-web-server/tests/: auth_test.rs  health_test.rs  portfolio_test.rs
03-web-server/tests/common/: mod.rs
04-crypto-primitives/: Cargo.toml  README.md
04-crypto-primitives/src/: demo.rs  hashing.rs  hdwallet.rs  keys.rs  lib.rs  main.rs  mnemonic.rs  signing.rs
05-multichain/: Cargo.toml  README.md
05-multichain/src/: btc.rs  cli.rs  display.rs  eth.rs  lib.rs  main.rs  sol.rs  trx.rs  types.rs
06-anchor-vault/: Anchor.toml  README.md  package.json
06-anchor-vault/programs/anchor_vault/: Cargo.toml
06-anchor-vault/programs/anchor_vault/src/: lib.rs
06-anchor-vault/programs/anchor_vault/src/instructions/: deposit.rs  initialize.rs  withdraw.rs
06-anchor-vault/programs/anchor_vault/tests/: test_deposit.rs  test_initialize.rs  test_withdraw.rs
06-anchor-vault/scripts/: interact.ts
