[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13.2", features = ["json"] }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tower_governor = "0.8.0"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
axum-test = "20.0.0"
