[package]
name = "crypto-primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
bech32 = "0.11.1"
bip39 = "2.2.2"
blake3 = "1.8.4"
bs58 = "0.5.1"
coins-bip32 = "0.13.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
rand = "0.10.1"
ripemd = "0.2.0"
sha2 = "0.11.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
