[package]
name = "multichain"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.1", features = ["providers", "rpc-types", "network"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = { version = "0.3.32", features = ["sink"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
