[package]
name = "multichain"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.1", features = ["providers", "rpc-types", "network"] }
anyhow = "1.0.102"
base64 = "0.22.1"
bs58 = "0.5.1"
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = "2.2.0"
futures-util = { version = "0.3.32", features = ["sink"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sha3 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
